# marco-polo

./: .gitignore  AGENTS.md  README.md  dev.sh  opencode.json  pyproject.toml
backend/: .example.env  AGENTS.md  README.md  pyproject.toml
backend/skills/: SKILLS.md
backend/skills/references/: geo-sources.md  intent-patterns.md  schema-templates.md
backend/src/: api.py  competitors.py  keywords.py  logging_config.py  model_utils.py  models.py  report.py  searcher.py  tools.py
frontend/: AGENTS.md  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/guide/: page.tsx
frontend/src/app/guide/aeo/: page.tsx
frontend/src/app/guide/geo/: page.tsx
frontend/src/app/guide/seo/: page.tsx
frontend/src/components/: BusinessProfile.tsx  CompetitorResults.tsx  ErrorState.tsx  KeywordResults.tsx  LoadingSkeleton.tsx  RegistrationForm.tsx  ReportRequest.tsx  SearchForm.tsx
misc/: mindmap.puml
react-app/: README.md  index.html  package-lock.json  package.json
react-app/src/: App.jsx  styles.css
react-app/src/components/: Bento.jsx  Blog.jsx  Contact.jsx  Devs.jsx  Footer.jsx  Hero.jsx  Logos.jsx  Pricing.jsx  Quotes.jsx  ReportCard.jsx  Solutions.jsx  Stats.jsx  ThreeUp.jsx  icons.jsx
src/: api.py  keywords.py  models.py
src/competitors/: main.py
