[project]
name = "marco-polo"
version = "0.1.0"
description = "Add your description here"
readme = "./README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "ddgs>=9.14.1",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.115.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-aws>=0.2.0",
    "langchain-openai>=1.1.13",
    "pydantic>=2",
    "python-dotenv>=1.0.0",
    "tavily>=0.5.0",
    "uvicorn[standard]>=0.34.0",
    "botocore[crt]>=1.43.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
marco-polo-api = "src.api:run"

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.28"]
